--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-imask": "^7.1.3",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.10.1",
     "typescript": "^4.9.5",
